add corsMiddleware and request limiter

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,11 @@
+API_KEY=your_secret
+
 SMTP_SERVER=smtp.example.com
 SMTP_PORT=587
 SMTP_USERNAME=your_email@example.com
 SMTP_PASSWORD=your_password
+
 MAX_FILE_SIZE=22000000
 DEFAULT_RECIPIENT=support@example.com
-ALLOWED_RECIPIENTS=support@example.com,admin@example.com
+
+CORS='https?://(localhost|127\.0\.0\.1|0\.0\.0\.0)(:\d+)?'
